Added repository and controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=KANINI-LTP-331;Database=SpotifyDemoDb;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
