Changed Server to '.'

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KANINI-LTP-331;Database=SpotifyDemoDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=.;Database=SpotifyDemoDb;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
